{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 21,
  "lineage": "3953e113-3e9b-f3c0-5e6b-7ba8e2eb9cdb",
  "resources": [
    {
      "module": "module.webapp.module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance_1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025a6a5beb74db87b",
            "arn": "arn:aws:ec2:eu-central-1:637423244779:instance/i-0dce42de6280e2e41",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dce42de6280e2e41",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0adc6bea53da122ba",
            "private_dns": "ip-172-31-30-86.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.30.86",
            "public_dns": "ec2-3-67-197-159.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.67.197.159",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0bb344f7214d22f60",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-instances-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de91357fb9d3d16c",
            "tags": {
              "Name": "instance_1"
            },
            "tags_all": {
              "Name": "instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db404ba2df460c95"
            ]
          },
          "dependencies": [
            "module.webapp.module.security_group.aws_security_group.sg"
          ]
        },
        {
          "index_key": "instance_2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-025a6a5beb74db87b",
            "arn": "arn:aws:ec2:eu-central-1:637423244779:instance/i-05c535db85039bec9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c535db85039bec9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-084fabda87be96324",
            "private_dns": "ip-172-31-23-201.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.23.201",
            "public_dns": "ec2-3-76-103-57.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.76.103.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03444022776d7287f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ec2-instances-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de91357fb9d3d16c",
            "tags": {
              "Name": "instance_2"
            },
            "tags_all": {
              "Name": "instance_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db404ba2df460c95"
            ]
          },
          "dependencies": [
            "module.webapp.module.security_group.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "application-lb",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:loadbalancer/app/tf-lb-20240122191019455100000005/5fad41a882feef07",
            "arn_suffix": "app/tf-lb-20240122191019455100000005/5fad41a882feef07",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20240122191019455100000005-611979115.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:loadbalancer/app/tf-lb-20240122191019455100000005/5fad41a882feef07",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20240122191019455100000005",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09e61760cc4b88331"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-013127189d486d5da"
              },
              {
                "subnet_id": "subnet-0de91357fb9d3d16c"
              }
            ],
            "subnets": [
              "subnet-013127189d486d5da",
              "subnet-0de91357fb9d3d16c"
            ],
            "vpc_id": "vpc-00c49f168cee4bb82",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "module.webapp.module.security_group.aws_security_group.alb_sg",
            "module.webapp.module.vpc.aws_default_subnet.default_subnet-1a",
            "module.webapp.module.vpc.aws_default_subnet.default_subnet-1b"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http-lb-listener",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:listener/app/tf-lb-20240122191019455100000005/5fad41a882feef07/88af6c7cf19a21af",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:listener/app/tf-lb-20240122191019455100000005/5fad41a882feef07/88af6c7cf19a21af",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:loadbalancer/app/tf-lb-20240122191019455100000005/5fad41a882feef07",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webapp.module.load_balancer.aws_lb.application-lb",
            "module.webapp.module.security_group.aws_security_group.alb_sg",
            "module.webapp.module.vpc.aws_default_subnet.default_subnet-1a",
            "module.webapp.module.vpc.aws_default_subnet.default_subnet-1b"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "lb_rule",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:targetgroup/tf-20240122191019094600000004/7aa4a4a3cfbc9435",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:listener-rule/app/tf-lb-20240122191019455100000005/5fad41a882feef07/88af6c7cf19a21af/911a662b8fb87f77",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:listener-rule/app/tf-lb-20240122191019455100000005/5fad41a882feef07/88af6c7cf19a21af/911a662b8fb87f77",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:listener/app/tf-lb-20240122191019455100000005/5fad41a882feef07/88af6c7cf19a21af",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webapp.module.load_balancer.aws_lb.application-lb",
            "module.webapp.module.load_balancer.aws_lb_listener.http-lb-listener",
            "module.webapp.module.load_balancer.aws_lb_target_group.lb-target-group",
            "module.webapp.module.security_group.aws_security_group.alb_sg",
            "module.webapp.module.vpc.aws_default_subnet.default_subnet-1a",
            "module.webapp.module.vpc.aws_default_subnet.default_subnet-1b",
            "module.webapp.module.vpc.aws_default_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "lb-target-group",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:targetgroup/tf-20240122191019094600000004/7aa4a4a3cfbc9435",
            "arn_suffix": "targetgroup/tf-20240122191019094600000004/7aa4a4a3cfbc9435",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 2,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:targetgroup/tf-20240122191019094600000004/7aa4a4a3cfbc9435",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20240122191019094600000004",
            "name_prefix": "tf-",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-00c49f168cee4bb82"
          },
          "dependencies": [
            "module.webapp.module.vpc.aws_default_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "lb_tg_attachment",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "instance_1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:targetgroup/tf-20240122191019094600000004/7aa4a4a3cfbc9435-20240122191052101500000008",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:targetgroup/tf-20240122191019094600000004/7aa4a4a3cfbc9435",
            "target_id": "i-0dce42de6280e2e41"
          },
          "dependencies": [
            "module.webapp.module.ec2.aws_instance.instance",
            "module.webapp.module.load_balancer.aws_lb_target_group.lb-target-group",
            "module.webapp.module.security_group.aws_security_group.sg",
            "module.webapp.module.vpc.aws_default_vpc.vpc"
          ]
        },
        {
          "index_key": "instance_2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:targetgroup/tf-20240122191019094600000004/7aa4a4a3cfbc9435-20240122191052153600000009",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:637423244779:targetgroup/tf-20240122191019094600000004/7aa4a4a3cfbc9435",
            "target_id": "i-05c535db85039bec9"
          },
          "dependencies": [
            "module.webapp.module.ec2.aws_instance.instance",
            "module.webapp.module.load_balancer.aws_lb_target_group.lb-target-group",
            "module.webapp.module.security_group.aws_security_group.sg",
            "module.webapp.module.vpc.aws_default_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_http_inbound",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-3350414438",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09e61760cc4b88331",
            "security_group_rule_id": "sgr-0fd9ada52e59bf854",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webapp.module.security_group.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.load_balancer",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_http_outbound",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1890858221",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09e61760cc4b88331",
            "security_group_rule_id": "sgr-0b4d33ff6c61e7297",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webapp.module.security_group.aws_security_group.alb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423244779:security-group/sg-09e61760cc4b88331",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09e61760cc4b88331",
            "ingress": [],
            "name": "terraform-20240122191017361800000001",
            "name_prefix": "terraform-",
            "owner_id": "637423244779",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c49f168cee4bb82"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.webapp.module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423244779:security-group/sg-0db404ba2df460c95",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0db404ba2df460c95",
            "ingress": [],
            "name": "ec2-instances-sg",
            "name_prefix": "",
            "owner_id": "637423244779",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-00c49f168cee4bb82"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.webapp.module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sg_rule",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-3628372534",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0db404ba2df460c95",
            "security_group_rule_id": "sgr-00f11c289bee1f90d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.webapp.module.security_group.aws_security_group.sg"
          ]
        }
      ]
    },
    {
      "module": "module.webapp.module.vpc",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet-1a",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423244779:subnet/subnet-0de91357fb9d3d16c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-0de91357fb9d3d16c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423244779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00c49f168cee4bb82"
          }
        }
      ]
    },
    {
      "module": "module.webapp.module.vpc",
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "default_subnet-1b",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423244779:subnet/subnet-013127189d486d5da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "172.31.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": false,
            "id": "subnet-013127189d486d5da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423244779",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-00c49f168cee4bb82"
          }
        }
      ]
    },
    {
      "module": "module.webapp.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "vpc",
      "provider": "module.webapp.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:637423244779:vpc/vpc-00c49f168cee4bb82",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0e6fd109a322aaf31",
            "default_route_table_id": "rtb-09097f3bc35098d56",
            "default_security_group_id": "sg-093d873fb24c79542",
            "dhcp_options_id": "dopt-058a40d5ab9d6ce4f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-00c49f168cee4bb82",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09097f3bc35098d56",
            "owner_id": "637423244779"
          }
        }
      ]
    }
  ]
}